--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>`Where A Traditional Past Meets A Modern Future.`</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src= alt=
+      <img src='' alt=`Modern Transit`>
       <h3>`Travel`</h3>
       
     </div>
